# trendoris

./: .gitignore  Dockerfile  pyproject.toml  railway.toml
trendoris/: config.py
trendoris/agents/: catalog_manager.py  order_agent.py  product_agent.py  trend_agent.py
trendoris/api/: main.py
trendoris/db/: base.py  models.py
trendoris/services/: cj_client.py  mocks.py  shopify_client.py
